tests-snapshots/dbc-cantools/long_names_multiple_relations.snap.stderr
error[E0428]: the name `MsgCaseTest` is defined multiple times
  --> tests-snapshots/dbc-cantools/long_names_multiple_relations.snap.rs:34:5
   |
32 |     MsgCaseTest(MsgCaseTest),
   |     ------------------------ previous definition of the type `MsgCaseTest` here
33 |     /// msg_case_test
34 |     MsgCaseTest(MsgCaseTest),
   |     ^^^^^^^^^^^^^^^^^^^^^^^^ `MsgCaseTest` redefined here
   |
   = note: `MsgCaseTest` must be defined only once in the type namespace of this enum

error[E0428]: the name `MsgCaseTest` is defined multiple times
   --> tests-snapshots/dbc-cantools/long_names_multiple_relations.snap.rs:673:1
    |
604 | pub struct MsgCaseTest {
    | ---------------------- previous definition of the type `MsgCaseTest` here
...
673 | pub struct MsgCaseTest {
    | ^^^^^^^^^^^^^^^^^^^^^^ `MsgCaseTest` redefined here
    |
    = note: `MsgCaseTest` must be defined only once in the type namespace of this module

error[E0119]: conflicting implementations of trait `Clone` for type `MsgCaseTest`
   --> tests-snapshots/dbc-cantools/long_names_multiple_relations.snap.rs:672:10
    |
603 | #[derive(Clone, Copy)]
    |          ----- first implementation here
...
672 | #[derive(Clone, Copy)]
    |          ^^^^^ conflicting implementation for `MsgCaseTest`

error[E0119]: conflicting implementations of trait `std::marker::Copy` for type `MsgCaseTest`
   --> tests-snapshots/dbc-cantools/long_names_multiple_relations.snap.rs:672:17
    |
603 | #[derive(Clone, Copy)]
    |                 ---- first implementation here
...
672 | #[derive(Clone, Copy)]
    |                 ^^^^ conflicting implementation for `MsgCaseTest`

error[E0119]: conflicting implementations of trait `TryFrom<&[u8]>` for type `MsgCaseTest`
   --> tests-snapshots/dbc-cantools/long_names_multiple_relations.snap.rs:699:1
    |
630 | impl core::convert::TryFrom<&[u8]> for MsgCaseTest {
    | -------------------------------------------------- first implementation here
...
699 | impl core::convert::TryFrom<&[u8]> for MsgCaseTest {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `MsgCaseTest`

error[E0119]: conflicting implementations of trait `Frame` for type `MsgCaseTest`
   --> tests-snapshots/dbc-cantools/long_names_multiple_relations.snap.rs:711:1
    |
642 | impl embedded_can::Frame for MsgCaseTest {
    | ---------------------------------------- first implementation here
...
711 | impl embedded_can::Frame for MsgCaseTest {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `MsgCaseTest`

error[E0592]: duplicate definitions with name `MESSAGE_ID`
   --> tests-snapshots/dbc-cantools/long_names_multiple_relations.snap.rs:617:5
    |
617 |     pub const MESSAGE_ID: embedded_can::Id = Id::Standard(unsafe {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ duplicate definitions for `MESSAGE_ID`
...
686 |     pub const MESSAGE_ID: embedded_can::Id = Id::Standard(unsafe {
    |     -------------------------------------- other definition for `MESSAGE_ID`

error[E0592]: duplicate definitions with name `new`
   --> tests-snapshots/dbc-cantools/long_names_multiple_relations.snap.rs:621:5
    |
621 |     pub fn new() -> Result<Self, CanError> {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ duplicate definitions for `new`
...
690 |     pub fn new() -> Result<Self, CanError> {
    |     -------------------------------------- other definition for `new`

error[E0592]: duplicate definitions with name `raw`
   --> tests-snapshots/dbc-cantools/long_names_multiple_relations.snap.rs:626:5
    |
626 |     pub fn raw(&self) -> &[u8; 8] {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ duplicate definitions for `raw`
...
695 |     pub fn raw(&self) -> &[u8; 8] {
    |     ----------------------------- other definition for `raw`

error[E0034]: multiple applicable items in scope
   --> tests-snapshots/dbc-cantools/long_names_multiple_relations.snap.rs:63:26
    |
 63 |             MsgCaseTest::MESSAGE_ID => {
    |                          ^^^^^^^^^^ multiple `MESSAGE_ID` found
    |
note: candidate #1 is defined in an impl for the type `MsgCaseTest`
   --> tests-snapshots/dbc-cantools/long_names_multiple_relations.snap.rs:617:5
    |
617 |     pub const MESSAGE_ID: embedded_can::Id = Id::Standard(unsafe {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: candidate #2 is defined in an impl for the type `MsgCaseTest`
   --> tests-snapshots/dbc-cantools/long_names_multiple_relations.snap.rs:686:5
    |
686 |     pub const MESSAGE_ID: embedded_can::Id = Id::Standard(unsafe {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0034]: multiple applicable items in scope
   --> tests-snapshots/dbc-cantools/long_names_multiple_relations.snap.rs:66:26
    |
 66 |             MsgCaseTest::MESSAGE_ID => {
    |                          ^^^^^^^^^^ multiple `MESSAGE_ID` found
    |
note: candidate #1 is defined in an impl for the type `MsgCaseTest`
   --> tests-snapshots/dbc-cantools/long_names_multiple_relations.snap.rs:617:5
    |
617 |     pub const MESSAGE_ID: embedded_can::Id = Id::Standard(unsafe {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: candidate #2 is defined in an impl for the type `MsgCaseTest`
   --> tests-snapshots/dbc-cantools/long_names_multiple_relations.snap.rs:686:5
    |
686 |     pub const MESSAGE_ID: embedded_can::Id = Id::Standard(unsafe {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0034]: multiple applicable items in scope
   --> tests-snapshots/dbc-cantools/long_names_multiple_relations.snap.rs:644:31
    |
644 |         if id.into() != Self::MESSAGE_ID { None } else { data.try_into().ok() }
    |                               ^^^^^^^^^^ multiple `MESSAGE_ID` found
    |
note: candidate #1 is defined in an impl for the type `MsgCaseTest`
   --> tests-snapshots/dbc-cantools/long_names_multiple_relations.snap.rs:617:5
    |
617 |     pub const MESSAGE_ID: embedded_can::Id = Id::Standard(unsafe {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: candidate #2 is defined in an impl for the type `MsgCaseTest`
   --> tests-snapshots/dbc-cantools/long_names_multiple_relations.snap.rs:686:5
    |
686 |     pub const MESSAGE_ID: embedded_can::Id = Id::Standard(unsafe {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0034]: multiple applicable items in scope
   --> tests-snapshots/dbc-cantools/long_names_multiple_relations.snap.rs:659:15
    |
659 |         Self::MESSAGE_ID
    |               ^^^^^^^^^^ multiple `MESSAGE_ID` found
    |
note: candidate #1 is defined in an impl for the type `MsgCaseTest`
   --> tests-snapshots/dbc-cantools/long_names_multiple_relations.snap.rs:617:5
    |
617 |     pub const MESSAGE_ID: embedded_can::Id = Id::Standard(unsafe {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: candidate #2 is defined in an impl for the type `MsgCaseTest`
   --> tests-snapshots/dbc-cantools/long_names_multiple_relations.snap.rs:686:5
    |
686 |     pub const MESSAGE_ID: embedded_can::Id = Id::Standard(unsafe {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0034]: multiple applicable items in scope
   --> tests-snapshots/dbc-cantools/long_names_multiple_relations.snap.rs:713:31
    |
713 |         if id.into() != Self::MESSAGE_ID { None } else { data.try_into().ok() }
    |                               ^^^^^^^^^^ multiple `MESSAGE_ID` found
    |
note: candidate #1 is defined in an impl for the type `MsgCaseTest`
   --> tests-snapshots/dbc-cantools/long_names_multiple_relations.snap.rs:617:5
    |
617 |     pub const MESSAGE_ID: embedded_can::Id = Id::Standard(unsafe {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: candidate #2 is defined in an impl for the type `MsgCaseTest`
   --> tests-snapshots/dbc-cantools/long_names_multiple_relations.snap.rs:686:5
    |
686 |     pub const MESSAGE_ID: embedded_can::Id = Id::Standard(unsafe {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0034]: multiple applicable items in scope
   --> tests-snapshots/dbc-cantools/long_names_multiple_relations.snap.rs:728:15
    |
728 |         Self::MESSAGE_ID
    |               ^^^^^^^^^^ multiple `MESSAGE_ID` found
    |
note: candidate #1 is defined in an impl for the type `MsgCaseTest`
   --> tests-snapshots/dbc-cantools/long_names_multiple_relations.snap.rs:617:5
    |
617 |     pub const MESSAGE_ID: embedded_can::Id = Id::Standard(unsafe {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: candidate #2 is defined in an impl for the type `MsgCaseTest`
   --> tests-snapshots/dbc-cantools/long_names_multiple_relations.snap.rs:686:5
    |
686 |     pub const MESSAGE_ID: embedded_can::Id = Id::Standard(unsafe {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
